Right calculation script.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="text" id="formula" placeholder="Example: NaCl">
             <button id="calculate">Calculate</button>
         </div>
-        <div id="results">
+        <div id="result">
             <h2>Results</h2>
             <table>
                 <thead>
